refactor: Update method calls to use getFirst() and clamp() for improved readability and consistency